--- a/assignement_3/.vscode/settings.json
+++ b/assignement_3/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "*.rmd": "markdown",
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "vector": "cpp",
+        "string": "cpp",
+        "iostream": "cpp"
     }
 }
