--- a/assignement_3/Makefile
+++ b/assignement_3/Makefile
@@ -48,10 +48,10 @@ RM = /usr/bin/cmake -E remove -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = "/mnt/c/Users/Alexandre Zajac/Desktop/Programmation/Training/CS014/assignements/assignement_2"
+CMAKE_SOURCE_DIR = /mnt/c/Users/Med/Documents/Cours/A4/Data/CS014_assignements/assignement_3
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = "/mnt/c/Users/Alexandre Zajac/Desktop/Programmation/Training/CS014/assignements/assignement_2"
+CMAKE_BINARY_DIR = /mnt/c/Users/Med/Documents/Cours/A4/Data/CS014_assignements/assignement_3
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -126,9 +126,9 @@ install/fast: preinstall/fast
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start "/mnt/c/Users/Alexandre Zajac/Desktop/Programmation/Training/CS014/assignements/assignement_2/CMakeFiles" "/mnt/c/Users/Alexandre Zajac/Desktop/Programmation/Training/CS014/assignements/assignement_2/CMakeFiles/progress.marks"
+	$(CMAKE_COMMAND) -E cmake_progress_start /mnt/c/Users/Med/Documents/Cours/A4/Data/CS014_assignements/assignement_3/CMakeFiles /mnt/c/Users/Med/Documents/Cours/A4/Data/CS014_assignements/assignement_3/CMakeFiles/progress.marks
 	$(MAKE) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start "/mnt/c/Users/Alexandre Zajac/Desktop/Programmation/Training/CS014/assignements/assignement_2/CMakeFiles" 0
+	$(CMAKE_COMMAND) -E cmake_progress_start /mnt/c/Users/Med/Documents/Cours/A4/Data/CS014_assignements/assignement_3/CMakeFiles 0
 .PHONY : all
 
 # The main clean target
@@ -234,35 +234,65 @@ gtest/fast:
 	$(MAKE) -f googletest/googletest/CMakeFiles/gtest.dir/build.make googletest/googletest/CMakeFiles/gtest.dir/build
 .PHONY : gtest/fast
 
-PriorityQueue.o: PriorityQueue.cpp.o
+HeapNode.o: HeapNode.cpp.o
 
-.PHONY : PriorityQueue.o
+.PHONY : HeapNode.o
 
 # target to build an object file
-PriorityQueue.cpp.o:
-	$(MAKE) -f CMakeFiles/test.dir/build.make CMakeFiles/test.dir/PriorityQueue.cpp.o
-	$(MAKE) -f CMakeFiles/main.dir/build.make CMakeFiles/main.dir/PriorityQueue.cpp.o
-.PHONY : PriorityQueue.cpp.o
+HeapNode.cpp.o:
+	$(MAKE) -f CMakeFiles/test.dir/build.make CMakeFiles/test.dir/HeapNode.cpp.o
+	$(MAKE) -f CMakeFiles/main.dir/build.make CMakeFiles/main.dir/HeapNode.cpp.o
+.PHONY : HeapNode.cpp.o
 
-PriorityQueue.i: PriorityQueue.cpp.i
+HeapNode.i: HeapNode.cpp.i
 
-.PHONY : PriorityQueue.i
+.PHONY : HeapNode.i
 
 # target to preprocess a source file
-PriorityQueue.cpp.i:
-	$(MAKE) -f CMakeFiles/test.dir/build.make CMakeFiles/test.dir/PriorityQueue.cpp.i
-	$(MAKE) -f CMakeFiles/main.dir/build.make CMakeFiles/main.dir/PriorityQueue.cpp.i
-.PHONY : PriorityQueue.cpp.i
+HeapNode.cpp.i:
+	$(MAKE) -f CMakeFiles/test.dir/build.make CMakeFiles/test.dir/HeapNode.cpp.i
+	$(MAKE) -f CMakeFiles/main.dir/build.make CMakeFiles/main.dir/HeapNode.cpp.i
+.PHONY : HeapNode.cpp.i
 
-PriorityQueue.s: PriorityQueue.cpp.s
+HeapNode.s: HeapNode.cpp.s
 
-.PHONY : PriorityQueue.s
+.PHONY : HeapNode.s
 
 # target to generate assembly for a file
-PriorityQueue.cpp.s:
-	$(MAKE) -f CMakeFiles/test.dir/build.make CMakeFiles/test.dir/PriorityQueue.cpp.s
-	$(MAKE) -f CMakeFiles/main.dir/build.make CMakeFiles/main.dir/PriorityQueue.cpp.s
-.PHONY : PriorityQueue.cpp.s
+HeapNode.cpp.s:
+	$(MAKE) -f CMakeFiles/test.dir/build.make CMakeFiles/test.dir/HeapNode.cpp.s
+	$(MAKE) -f CMakeFiles/main.dir/build.make CMakeFiles/main.dir/HeapNode.cpp.s
+.PHONY : HeapNode.cpp.s
+
+Sort.o: Sort.cpp.o
+
+.PHONY : Sort.o
+
+# target to build an object file
+Sort.cpp.o:
+	$(MAKE) -f CMakeFiles/test.dir/build.make CMakeFiles/test.dir/Sort.cpp.o
+	$(MAKE) -f CMakeFiles/main.dir/build.make CMakeFiles/main.dir/Sort.cpp.o
+.PHONY : Sort.cpp.o
+
+Sort.i: Sort.cpp.i
+
+.PHONY : Sort.i
+
+# target to preprocess a source file
+Sort.cpp.i:
+	$(MAKE) -f CMakeFiles/test.dir/build.make CMakeFiles/test.dir/Sort.cpp.i
+	$(MAKE) -f CMakeFiles/main.dir/build.make CMakeFiles/main.dir/Sort.cpp.i
+.PHONY : Sort.cpp.i
+
+Sort.s: Sort.cpp.s
+
+.PHONY : Sort.s
+
+# target to generate assembly for a file
+Sort.cpp.s:
+	$(MAKE) -f CMakeFiles/test.dir/build.make CMakeFiles/test.dir/Sort.cpp.s
+	$(MAKE) -f CMakeFiles/main.dir/build.make CMakeFiles/main.dir/Sort.cpp.s
+.PHONY : Sort.cpp.s
 
 main.o: main.cpp.o
 
@@ -336,9 +366,12 @@ help:
 	@echo "... gmock"
 	@echo "... gtest_main"
 	@echo "... gtest"
-	@echo "... PriorityQueue.o"
-	@echo "... PriorityQueue.i"
-	@echo "... PriorityQueue.s"
+	@echo "... HeapNode.o"
+	@echo "... HeapNode.i"
+	@echo "... HeapNode.s"
+	@echo "... Sort.o"
+	@echo "... Sort.i"
+	@echo "... Sort.s"
 	@echo "... main.o"
 	@echo "... main.i"
 	@echo "... main.s"
